--- a/about.html
+++ b/about.html
@@ -17,46 +17,19 @@
       </a>
       <nav>
         <ul>
-          <li><a href="index.html" class="selected">Portfolio</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="index.html">Portfolio</a></li>
+          <li><a href="about.html" class="selected">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
     <div id="wrapper">
       <section>
-        <ul id="gallery">
-          <li>
-            <a href="img/numbers-01.jpg">
-              <img src="img/numbers-01.jpg" alt="">
-              <p>Experimentation with color and texture.</p>
-            </a>
-          </li>
-          <li>
-            <a href="img/numbers-02.jpg">
-              <img src="img/numbers-02.jpg" alt="">
-              <p>Playing with blending modes in Photoshop.</p>
-            </a>
-          </li>
-          <li>
-            <a href="img/numbers-06.jpg">
-              <img src="img/numbers-06.jpg" alt="">
-              <p>Trying to create an 80's style of glows.</p>
-            </a>
-          </li>
-          <li>
-            <a href="img/numbers-09.jpg">
-              <img src="img/numbers-09.jpg" alt="">
-              <p>Drips created using Photoshop brushes.</p>
-            </a>
-          </li>
-          <li>
-            <a href="img/numbers-12.jpg">
-              <img src="img/numbers-12.jpg" alt="">
-              <p>Creating shapes using repetition.</p>
-            </a>
-          </li>
-        </ul>
+        <img src="img/profile.jpg" alt="Photograph of Kewal Krishna" class="profile-photo">
+        <h3>About</h3>
+        <p>Hello friends, I'm Kewal Krishna ! But you guys can call me Aster (which is my nickname). This is my online portfolio where I share all of my favroite work. When I am not working on web projects I enjoy gaming(mainly CS:GO and 1.6) and partying(with dubstep music full on)
+        </p>
+        <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com/kewalkris10">@kewalkris10</a>.</p>
       </section>
       <footer>
         <a href="http://twitter.com/kewalkris10"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
