--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       <section>
         <img src="img/profile.jpg" alt="Photograph of Kewal Krishna" class="profile-photo">
         <h3>About</h3>
-        <p>Hello friends, I'm Kewal Krishna ! But you guys can call me Aster (which is my nickname). This is my online portfolio where I share all of my favroite work. When I am not working on web projects I enjoy gaming(mainly CS:GO and 1.6) and partying(with dubstep music full on)
+        <p>Hello friends, I'm Kewal Krishna ! But you guys can call me Aster (which is my nickname). This is my online portfolio where I share all of my favourite work. When I am not working on web projects I enjoy gaming(mainly CS:GO and 1.6) and partying(with dubstep music full on)
         </p>
         <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com/kewalkris10">@kewalkris10</a>.</p>
       </section>
