Add 2048 tile game

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <title>Kewal Krishna Kharkwal | Web Application Developer</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/mainpage.css">
     <link rel="stylesheet" href="css/responsive.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -27,9 +27,9 @@
       <section>
         <img src="img/profile.jpg" alt="Photograph of Kewal Krishna" class="profile-photo">
         <h3>About</h3>
-        <p>Hello friends, I'm Kewal Krishna ! But you guys can call me Aster (which is my nickname). This is my online portfolio where I share all of my favourite work. When I am not working on web projects I enjoy gaming(mainly CS:GO and 1.6) and partying(with dubstep music full on)
+        <p>Hello friends, I'm Kewal Krishna ! But you guys can call me Aster (which is my nickname). This is my online portfolio where I share all of my favourite work . When I am not working on web projects I enjoy gaming (mainly CS:GO and 1.6) and partying (with dubstep music full on).
         </p>
-        <p>If you'd like to follow me on Twitter, my username is <a href="http://twitter.com/kewalkris10">@kewalkris10</a>.</p>
+        <p>If you'd like to follow me on Twitter , my username is <a href="http://twitter.com/kewalkris10">@kewalkris10</a>.</p>
       </section>
       <footer>
         <a href="http://twitter.com/kewalkris10"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
