--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <title>Kewal Krishna Kharkwal | Web Application Developer</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/mainpage.css">
     <link rel="stylesheet" href="css/responsive.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -27,12 +27,12 @@
       <section id="primary">
         <h3>General Information</h3>
         <p>I am currently looking for new web projects mainly for full time scenario. If you have any questions, please don't hesitate to contact me!</p>
-        <p>Please only use phone contact for urgent inquiries. Otherwise, Twitter and email are the best way to reach me.</p>
+        <p>Please only use phone contact for urgent inquiries. Otherwise, Twitter and email are the best ways to reach me.</p>
       </section>
       <section id="secondary">
         <h3>Contact Details</h3>
         <ul class="contact-info">
-          <li class="phone"><a href="tel:+91-9695963442">9695963442</a></li>
+          <li class="phone"><a href="tel:+91-9695963442">+91 9695963442</a></li>
           <li class="mail"><a href="mailto:kewalkris10@gmail.com">kewalkris10@gmail.com</a></li>
           <li class="twitter"><a href="http://twitter.com/intent/tweet?screen_name=kewalkris10">@kewakris10</a></li>
         </ul>
