--- a/index.html
+++ b/index.html
@@ -94,7 +94,46 @@
       <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
     </p>
     <hr>
-    
+    <p>
+    <strong class="important">Update : </strong>Every new project will replace an image below.
+    </p>
+    <hr>
+    </div>
+    <div id="wrapper">
+      <section>
+        <ul id="gallery">
+          <li>
+            <a href="img/numbers-01.jpg">
+              <img src="img/numbers-01.jpg" alt="">
+              <p>Experimentation with color and texture.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-02.jpg">
+              <img src="img/numbers-02.jpg" alt="">
+              <p>Playing with blending modes in Photoshop.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-06.jpg">
+              <img src="img/numbers-06.jpg" alt="">
+              <p>Trying to create an 80's style of glows.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-09.jpg">
+              <img src="img/numbers-09.jpg" alt="">
+              <p>Drips created using Photoshop brushes.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/numbers-12.jpg">
+              <img src="img/numbers-12.jpg" alt="">
+              <p>Creating shapes using repetition.</p>
+            </a>
+          </li>
+        </ul>
+      </section>
       <footer>
         <a href="http://twitter.com/kewalkris10" target=_blank><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
         <a href="http://facebook.com/kewal.kris" target=_blank><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
