--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         <ul class="contact-info">
           <li class="phone"><a href="tel:+91-9695963442">+91 9695963442</a></li>
           <li class="mail"><a href="mailto:kewalkris10@gmail.com">kewalkris10@gmail.com</a></li>
-          <li class="twitter"><a href="http://twitter.com/intent/tweet?screen_name=kewalkris10" target=_blank>@kewakris10</a></li>
+          <li class="twitter"><a href="http://twitter.com/intent/tweet?screen_name=kewalkris10" target=_blank>@kewalkris10</a></li>
         </ul>
       </section>
       <footer>
